2006-09-23  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/tools/gimprectangleselecttool.c
	* app/tools/gimprectangletool.[ch]:simplify code by
	removing unneeded properties and getters/setters.

2006-09-23  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/tools/gimprectangleoptions.[ch]
	* app/tools/gimprectangleselecttool.c
	* app/tools/gimprectangletool.c
	* app/tools/gimpselectionoptions.c: move "auto-shrink"
	and "shrink-merged" from selection options to 
	rectangle options where they belong; now shown
	for crop tool as well as rect select.

2006-09-23  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/widgets/gimppropwidgets.c
	* app/tools/gimprectangleoptions.c: add functionality
	for aspect ratio control.
	
2006-09-23  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/actions/tools-actions.c
	* app/actions/tools-commands.[ch]: add new actions for
	toggling "fixed-aspect" and "fixed-center" options of
	rectangle tools.

	* app/tools/gimprectangletool.[ch]
	* app/tools/gimprectangleselecttool.c
	* app/tools/gimpcroptool.c: rely on new actions for
	keyboard control, not on modifiers pressed after
	mouse1-down.
	
2006-09-22  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/widgets/gimppropwidgets.[ch]
	* app/tools/gimprectangleoptions.c
	* app/tools/gimprectangletool.c: more work on option
	layout and handling.
	
2006-09-22  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* libgimpwidgets/gimppropwidgets.[ch]: revert previous
	change; was not necessary.

2006-09-22  Michael Natterer  <mitch@gimp.org>

	* app/display/gimpstatusbar.c (gimp_statusbar_progress_style_set):
	terminate the spaces string correctly. Spotted by bill.

2006-09-22  Michael Natterer  <mitch@gimp.org>

	* app/display/gimpstatusbar.[ch]: changed all message setting
	functions to use printf-style argument lists. Added new API to
	show a temporary message that stays on top regardless of any other
	message activity and disappears after 3 seconds.
