@@ -108,6 +108,11 @@ void        gimp_rectangle_tool_motion              (GimpTool                *to
 gboolean    gimp_rectangle_tool_key_press           (GimpTool                *tool,
                                                      GdkEventKey             *kevent,
                                                      GimpDisplay             *display);
+void        gimp_rectangle_tool_active_modifier_key (GimpTool                *tool,
+                                                     GdkModifierType          key,
+                                                     gboolean                 press,
+                                                     GdkModifierType          state,
+                                                     GimpDisplay             *display);
 void        gimp_rectangle_tool_oper_update         (GimpTool                *tool,
                                                      GimpCoords              *coords,
                                                      GdkModifierType          state,
